--- a/src/components/corousal/ImageContainer/ImageContainer.module.css
+++ b/src/components/corousal/ImageContainer/ImageContainer.module.css
@@ -1,7 +1,16 @@
 .ImageContainer{
     position: relative;
     width: 100%;
-    height: 600px;
+    height: 300px;
+    padding-top: 80px;
+    border-radius: 25px;
     /* border:5px solid red; */
     overflow: hidden;
+}
+
+@media (min-width: 500px) {
+    .ImageContainer{
+        padding-top: 10px;
+        height: 600px;
+    }
 }
