--- a/src/components/dialogues/Dialogues.module.css
+++ b/src/components/dialogues/Dialogues.module.css
@@ -1,6 +1,8 @@
 .DialogueContainer{
     padding-top: 10px;
     padding-bottom: 10px;
+    padding-left: 5%;
+    padding-right: 5%;
     display:flex;
     flex-direction: row;
     justify-content: center;
