--- a/src/components/corousal/ImageContainer/ImageContainer.module.css
+++ b/src/components/corousal/ImageContainer/ImageContainer.module.css
@@ -1,6 +1,6 @@
 .ImageContainer{
     position: relative;
-    width: 100vw;
+    width: 100%;
     height: 300px;
     padding-top: 80px;
     border-radius: 25px;
