--- a/src/components/movies/Movies.module.css
+++ b/src/components/movies/Movies.module.css
@@ -1,3 +1,55 @@
+.Movies{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 80px;
+    padding-left:10px;
+}
+
+.title{
+    font-size: 1.2rem;
+    color:rgba(221, 221, 221, 0.541);
+    margin-bottom: 20px;
+    border-bottom: 0.5px dashed rgba(221, 221, 221, 0.733);
+}
+
 table{
-    width:80%;
+    text-align: left;
+    width:100%;
+}
+
+td{
+    font-size: 1.2rem;
+    padding:5px;
+    color:#ddd;
+}
+
+th{
+    font-size: 1.4rem;
+    padding:5px;
+    color:rgb(240, 238, 238);
+}
+
+
+@media (min-width:499px){
+    table{
+        width: 80%;
+    }
+
+    .title{
+        font-size: 2.5rem;
+        margin-left:-50px;
+        margin-bottom: 40px;
+    }
+
+    td{
+        font-size: 1.9rem;
+        padding:10px;
+    }
+    
+    th{
+        font-size: 2.1rem;
+        padding:10px;
+    }
 }
