--- a/src/components/dialogues/Dialogues.module.css
+++ b/src/components/dialogues/Dialogues.module.css
@@ -4,14 +4,14 @@
     padding-left: 5%;
     padding-right: 5%;
     display:flex;
-    flex-direction: row;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: flex-start;
     align-items: center;
-
+    min-height: 100px;
 }
 
 .Dialogues{
     font-size: 20px;
     font-family: cursive;
-
+    color:#ddd;
 }
