--- a/src/components/statsContainer/stats/Stats.module.scss
+++ b/src/components/statsContainer/stats/Stats.module.scss
@@ -1,11 +1,11 @@
 .Stats{
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    min-height: 100vh;
     justify-content: space-evenly;
     align-items: center;
 
-    .profile-picture{
+    .profile_picture{
         height: 40%;
         width: 90%;
         // background-position: top;
@@ -15,6 +15,5 @@
         height: 50%;
         width: 100%;
     }
-
     
 }
