--- a/src/components/statsContainer/BarChart/BarChart.module.scss
+++ b/src/components/statsContainer/BarChart/BarChart.module.scss
@@ -1,29 +1,47 @@
-.main_container{
+.BarChart{
 
-    width:92%;
+    height:40%;
+    width:100%;
 
-    .row{
+    th{
+        font-size: 1rem;
+        color:rgb(240, 238, 238);
+    }
+    td{
+        font-size: 1rem;
+        color:#ddd;
+    }     
+    .bar{
         display: flex;
         flex-direction: row;
-        // justify-content: space-between;
-        align-items: center;
-        font-size: 1.1rem;
+    }
+    table{
+        height: 100%;
+        width: 100%;
+    }
+}
 
-        .label{
-            width: 33%;
-            text-align: left;
-        }
 
-        .bar{
-            width: 55%;
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-        }
 
-        .score{
-            width: 12%;
-            text-align: right;
+@media only screen and (min-width: 740px) and (max-width:960px){
+    .BarChart{
+        height:100%;
+        width:40%;
+
+        th,td{
+            font-size: 1.3rem;
         }
     }
 }
+
+@media only screen and (min-width: 960px) {
+    .BarChart{
+        height:100%;
+        width:40%;
+
+        th,td{
+            font-size: 1.9rem;
+        }
+    }
+}
+
