--- a/src/components/statsContainer/stats/Stats.module.scss
+++ b/src/components/statsContainer/stats/Stats.module.scss
@@ -1,21 +1,47 @@
 .Stats{
     display: flex;
+    height: 100vh;
+    padding-bottom: 15vh;
     flex-direction: column;
-    min-height: 100vh;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     align-items: center;
 
-    .profile_picture{
-        height: 40%;
-        width: 90%;
-        // background-position: top;
-    }
-
-    .statsBar{
-        height: 50%;
+    .Image{
+        height: 60%;
         width: 100%;
-        padding-left: 8%;
         
+        .profile_picture{
+            height: 100%;
+            width: 100%;
+            // background-position: top;
+        }
     }
     
+}
+
+@media only screen and (min-width: 500px) and (max-width:740px){
+    .Image{
+        width: 70%;
+    }
+}
+
+@media only screen and (min-width: 740px){
+    .Stats{
+
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        max-height: 80vh;
+
+        .Image{
+            height: 100%;
+            width: 40%;
+            
+            .profile_picture{
+                height: 100%;
+                width: 100%;
+            }
+        }
+
+    }
 }
