--- a/src/components/movies/Movies.module.css
+++ b/src/components/movies/Movies.module.css
@@ -19,6 +19,13 @@ table{
     width:100%;
 }
 
+tbody{
+    white-space: wrap;
+    overflow: auto;
+    text-overflow: clip;
+}
+
+
 td{
     font-size: 1.2rem;
     padding:5px;
